[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/ui/deck_builder_ui.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/card_frame_common.png" id="2"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/card_frame_rare.png" id="3"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/card_frame_epic.png" id="4"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/card_frame_legendary.png" id="5"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/card_frame.png" id="6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_left = 10
corner_radius_bottom_right = 10

[node name="DeckBuilder" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.08, 1.0)

[node name="DeckPanel" type="Panel" parent="."]
anchor_right = 0.4
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 20.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="Header" type="HBoxContainer" parent="DeckPanel"]
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0

[node name="DeckName" type="Label" parent="DeckPanel/Header"]
layout_mode = 2
text = "Current Deck"
theme_override_font_sizes/font_size = 24

[node name="ScrollContainer" type="ScrollContainer" parent="DeckPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = -10.0

[node name="DeckSlotsContainer" type="GridContainer" parent="DeckPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="CollectionPanel" type="Panel" parent="."]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 0.85
offset_left = 10.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -10.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="FilterContainer" type="HBoxContainer" parent="CollectionPanel"]
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
theme_override_constants/separation = 10

[node name="AllButton" type="Button" parent="CollectionPanel/FilterContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "All"

[node name="TroopsButton" type="Button" parent="CollectionPanel/FilterContainer"]
layout_mode = 2
toggle_mode = true
text = "Troops"

[node name="SpellsButton" type="Button" parent="CollectionPanel/FilterContainer"]
layout_mode = 2
toggle_mode = true
text = "Spells"

[node name="BuildingsButton" type="Button" parent="CollectionPanel/FilterContainer"]
layout_mode = 2
toggle_mode = true
text = "Buildings"

[node name="SearchContainer" type="HBoxContainer" parent="CollectionPanel"]
anchor_right = 1.0
offset_left = 10.0
offset_top = 55.0
offset_right = -10.0
offset_bottom = 90.0
theme_override_constants/separation = 10

[node name="SearchLineEdit" type="LineEdit" parent="CollectionPanel/SearchContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search cards..."

[node name="SortOptionButton" type="OptionButton" parent="CollectionPanel/SearchContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 0)

[node name="ScrollContainer" type="ScrollContainer" parent="CollectionPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 100.0
offset_right = -10.0
offset_bottom = -10.0

[node name="CardCollectionContainer" type="GridContainer" parent="CollectionPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 6
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="StatsPanel" type="Panel" parent="."]
anchor_top = 0.5
anchor_right = 0.4
anchor_bottom = 0.85
offset_left = 20.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_constants/separation = 15

[node name="StatsTitle" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "Deck Statistics"
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="AverageElixir" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "Avg Elixir: 0.0"
theme_override_font_sizes/font_size = 16

[node name="CardCount" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "Cards: 0/8"
theme_override_font_sizes/font_size = 16

[node name="ValidationStatus" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "Need 8 cards"
theme_override_font_sizes/font_size = 16

[node name="Separator" type="HSeparator" parent="StatsPanel/VBoxContainer"]
layout_mode = 2

[node name="DeckTypeLabel" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "Deck Type:"
theme_override_font_sizes/font_size = 14

[node name="TroopsCount" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "Troops: 0"
theme_override_font_sizes/font_size = 14

[node name="SpellsCount" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "Spells: 0"
theme_override_font_sizes/font_size = 14

[node name="BuildingsCount" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "Buildings: 0"
theme_override_font_sizes/font_size = 14

[node name="ButtonContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.95
offset_left = -150.0
offset_right = 150.0
theme_override_constants/separation = 20
alignment = 1

[node name="CancelButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 40)
text = "Cancel"
theme_override_font_sizes/font_size = 16

[node name="SaveButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 40)
text = "Save Deck"
theme_override_font_sizes/font_size = 16